# contribute-to-open-source

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/actions/setup-pdm-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
contribute_to_open_source/: foo.py
contribute_to_open_source/api_helpers/: headers.py
contribute_to_open_source/searchers/: issues.py
docs/: index.md  modules.md
tests/: test_foo.py
tests/unit/api_helpers/: headers_test.py
tests/unit/searchers/: issues_test.py
