[project]
name = "contribute_to_open_source"
dynamic = ["version"]
description = "Tool to help one to contribute to Open Source projects. Goal is to search Github for open issues that might be interesting."
authors = [
    {name = "Mike Weltevrede", email = "mikeweltevrede@gmail.com"},
]
readme = "README.md"
packages = [
  {include = "contribute_to_open_source"}
]
requires-python = ">=3.9,<4.0"
dependencies = []
license = {text = "MIT license"}
keywords = ['python']

[tool.pdm.version]
source = "scm"

[project.urls]
Homepage = "https://github.com/mikeweltevrede/contribute-to-open-source/"
Repository = "https://github.com/mikeweltevrede/contribute-to-open-source"
Documentation = "https://github.com/mikeweltevrede/contribute-to-open-source/"

[tool.pdm.dev-dependencies]
test = [
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0"
  ]
dev = [
"deptry>=0.6.4",
"mypy>=0.981",
  "pre-commit>=2.20.0",
  "tox>=3.25.1"
]
docs = [
  "mkdocs>=1.4.2",
  "mkdocs-material>=8.5.10",
  "mkdocstrings[python]>=0.19.0"
]

[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "."
includes = ["contribute_to_open_source"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
files = ["contribute_to_open_source"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.ruff]
src = ["contribute_to_open_source", "tests"]
line-length = 120
fix = true
show-fixes = true
select = [
    "YTT",      # flake8-2020
    "S",        # flake8-bandit
    "B",        # flake8-bugbear
    "A",        # flake8-builtins
    "C4",       # flake8-comprehensions
    "T10",      # flake8-debugger
    "SIM",      # flake8-simplify
    "I",        # isort
    "C90",      # mccabe
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "PGH",      # pygrep-hooks
    "UP",       # pyupgrade
    "RUF",      # ruff
    "TRY",      # tryceratops
]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["contribute_to_open_source"]
